Fix TextEdit content size calculation

Task-number: QTBUG-31154
Change-Id: I9d3e31352967b99b4bbb38f5819d3d093438ee37
Reviewed-by: Caroline Chao <caroline.chao@digia.com>